# LoRA-Merger-ComfyUI

./: README.md  __init__.py  lora_apply.py  lora_load.py  lora_merge.py  lora_merge_xy.py  lora_resize.py  lora_save.py  peft_utils.py  pyproject.toml  utility.py
js/: lora-merge.js  widget-hider.js
