[project]
name = "lora-merger-comfyui"
description = "An extension for merging LoRAs. Offers a wide range of LoRA merge techniques (including dare) and XY plots. XY plots require efficiency nodes."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/larsupb/LoRA-Merger-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "LoRA-Merger-ComfyUI"
Icon = ""
